--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@
   --primary: #141414;
   --light: #F3F3F3;
   --dark: 	#686868;
+  
+  --movie-width: 15.5vw;
+  --movie-height: 200px;
+  --arrow-width: 50px;
+  --slider-py: 150px;
 }
 
 html, body {
@@ -15,8 +20,11 @@ html, body {
   font-family: Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   line-height: 1.4;
+  overflow-x: hidden;
 }
-
+.container {
+  position: relative;
+}
 img {
   max-width: 100%;
 }
@@ -97,33 +105,135 @@ header {
 }
 
 
-/* MAIN CONTIANER */
+/* MAIN CONTAINER */
 .main-container {
   padding: 50px;
 }
 
-.box {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-columns: repeat(6, minmax(100px, 1fr));
+
+/* SLIDER CONTAINER */
+.slider {
+  width: 100%;
+  overflow-x: visible;
+  overflow-y: visible;
+  white-space: nowrap;
+  position: relative;
+  padding-top: 0;
+  padding-bottom: 300px;
 }
 
-.box button {
-  transition: transform .3s;  
+/* SLIDER INDICATORS */
+.container-indicators {
+  width: 100px;
+  position: absolute;
+  right: 0;
+  top: calc(var(--slider-py) - 60px);
+  visibility: hidden;
+}
+.indicator {
+  width: 15px;
+  height: 2px;
+  background-color: grey;
+  display: inline-block;
+}
+.indicator.active {
+  background-color: white;
 }
 
-.box button:hover {
-  transition: transform .3s;
-  -ms-transform: scale(1.4);
-  -webkit-transform: scale(1.4);  
-  transform: scale(1.4);
+/* MOVIE ELEMNTS */
+.movie {
+  width: var(--movie-width);
+  height: var(--movie-height);
+  display: inline-block;
+  position: relative;
+  color: white;
+  padding: 0 2px;
+  font-size: 0.8rem;
+  transition: all 0.8s ease-in-out;
 }
 
-.box img {
-  border-radius: 2px;
+.movie:nth-of-type(1) {
+  margin-left: var(--arrow-width);
 }
 
-/* LINKS */
+.movie img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.description {
+  position: absolute;
+  display: none;
+  z-index: 9999;
+  background-color: #272727;
+  width: var(--movie-width);
+  margin-top: -10px;
+  padding: 10px 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+
+.movie:hover {
+    transform: scale(1.3);
+    z-index: 2;
+}
+  /* Make description visible when movie is hovered */
+.movie:hover > .description {
+    display: block;
+}
+.movie:hover > img {
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+
+.description_title {
+  padding: 10px;
+}
+
+.description_title:hover {
+  color:grey;
+}
+
+.imdb_note {
+  padding: 10px;
+  color: green;
+}
+
+/* BUTTONS SLIDER */
+.btn-nav {
+  width: var(--arrow-width);
+  height: var(--movie-height);
+  border-radius: 5px;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  outline: none;
+  border: none;
+  color: white;
+  top: 126;
+  z-index: 5;
+  visibility: hidden;
+}
+
+#moveLeft {
+  left: 0;
+}
+
+#moveRight {
+  right: 0;
+}
+
+
+.container:hover .btn-nav,
+  .container:hover .container-indicators {
+    visibility: visible;
+  }
+
+
+/* LINKS FOOTER */
 .link {
   padding: 50px;
 }
@@ -145,15 +255,6 @@ header {
   color: var(--dark);
   text-decoration: underline;
 }
-
-.logos a{
-  padding: 10px;
-}
-
-.logo {
-  color: var(--dark);
-}
-
 
 /* FOOTER */
 footer {
@@ -181,6 +282,7 @@ footer {
 /* Modal Content/Box */
 .modal-wrapper {
   background-color: #fefefe;
+  color:#141414;
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
