--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html, body {
 .container {
   position: relative;
 }
+
 img {
   max-width: 100%;
 }
@@ -73,7 +74,6 @@ header {
   padding: 0; 
 }
 
-
 .main-nav {
   grid-area: mn;
   padding: 0 30px 0 20px;
@@ -104,17 +104,15 @@ header {
   color: var(--dark);
 }
 
-
 /* MAIN CONTAINER */
 .main-container {
   padding: 50px;
 }
 
-
 /* SLIDER CONTAINER */
 .slider {
   width: 100%;
-  overflow-x: visible;
+  overflow-x: hidden;
   overflow-y: visible;
   white-space: nowrap;
   position: relative;
@@ -125,17 +123,19 @@ header {
 /* SLIDER INDICATORS */
 .container-indicators {
   width: 100px;
-  position: absolute;
+  position: absolute; 
   right: 0;
   top: calc(var(--slider-py) - 60px);
   visibility: hidden;
 }
+
 .indicator {
   width: 15px;
   height: 2px;
   background-color: grey;
   display: inline-block;
 }
+
 .indicator.active {
   background-color: white;
 }
@@ -150,6 +150,7 @@ header {
   padding: 0 2px;
   font-size: 0.8rem;
   transition: all 0.8s ease-in-out;
+  top:30px; 
 }
 
 .movie:nth-of-type(1) {
@@ -175,7 +176,6 @@ header {
   border-bottom-right-radius: 10px;
 }
 
-
 .movie:hover {
     transform: scale(1.3);
     z-index: 2;
@@ -188,7 +188,6 @@ header {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
-
 
 .description_title {
   padding: 10px;
@@ -213,7 +212,7 @@ header {
   outline: none;
   border: none;
   color: white;
-  top: 126;
+  top: 156;
   z-index: 5;
   visibility: hidden;
 }
@@ -226,12 +225,10 @@ header {
   right: 0;
 }
 
-
 .container:hover .btn-nav,
   .container:hover .container-indicators {
     visibility: visible;
   }
-
 
 /* LINKS FOOTER */
 .link {
