--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
 /* CSS VARIABLES */
+
+@font-face {
+  font-family: 'gothammedium';
+  src: url('../Gotham-Font/webkit/gothammedium-webfont.eot');
+  src: url('../Gotham-Font/webkit/gothammedium-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../Gotham-Font/webkit/gothammedium-webfont.woff2') format('woff2'),
+       url('../Gotham-Font/webkit/gothammedium-webfont.woff') format('woff'),
+       url('../Gotham-Font/webkit/gothammedium-webfont.ttf') format('truetype'),
+       url('../Gotham-Font/webkit/gothammedium-webfont.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
 :root {
   --primary: #141414;
   --light: #F3F3F3;
@@ -17,7 +31,7 @@ html, body {
   padding: 0;
   background-color: var(--primary);
   color: var(--light);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: gothammedium, Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   line-height: 1.4;
   overflow-x: hidden;
@@ -26,13 +40,11 @@ html, body {
   position: relative;
 }
 
-img {
-  max-width: 100%;
-}
 
 h1 {
-  padding-top: 60px;
-  padding-left: 50px
+  padding-top: 0px;
+  padding-left: 50px;
+  margin-top: 20px;
 }
 
 .wrapper {
@@ -54,26 +66,23 @@ header {
   width: 100%;
   margin-bottom: 0px;
   z-index:3; 
+  align-items: center;
 }
 
 .netflixLogo {
   grid-area: nt;
   object-fit: cover;
-  width: 100px;
+  width: 300px;
   max-height: 100%;
   
   padding-left: 30px;
   padding-top: 0px;  
 }
-
-.netflixLogo img {  
-  height: 35px;     
-}
-
-#logo {
-  color: #E50914;  
-  margin: 0; 
-  padding: 0; 
+#juststreamit {
+  font-size: xx-large;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  color: rgb(229,9,20);
 }
 
 .main-nav {
@@ -107,9 +116,6 @@ header {
 }
 
 /* MAIN CONTAINER */
-/*.main-container {
-}*/
-
 /* SLIDER CONTAINER */
 .slider {
   width: 100%;
@@ -117,8 +123,8 @@ header {
   overflow-y: visible;
   white-space: nowrap;
   position: relative;
-  padding-top: 0;
-  padding-bottom: 300px;
+  padding-top: 20px;
+  padding-bottom: 200px;
 }
 
 /* SLIDER INDICATORS  */
@@ -164,6 +170,7 @@ header {
   height: 100%;
   width: 100%;
   border-radius: 10px;
+  max-width: 100%;
 }
 
 .description {
@@ -183,27 +190,61 @@ header {
     transform: scale(1.3);
     z-index: 2;
 }
-  /* Make description visible when movie is hovered */
+
 .movie:hover > .description {
     display: block;
+    z-index: 3;
 }
 .movie:hover > img {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    cursor: pointer;
+}
+
+.description:hover {
+  cursor:default;
 }
 
 .description_title {
-  padding: 10px;
+  padding-left: 10px;
   white-space: initial;
 }
 
 .description_title:hover {
   color:grey;
+  cursor: pointer;
 }
 
 .imdb_note {
   padding: 10px;
   color: green;
+}
+
+/* IMG PRINCIPAL */
+.mainmovie {
+  width: 400px;
+  height: 400px;
+  position: relative;
+  right: 0px;
+}
+
+.mainmovie img {
+  height: 100%;
+  width: 100%;
+}
+
+.main-description {
+  display: inline-block;
+  position: absolute;
+  z-index: 9999;
+  background-color: #272727;
+  width: var(--movie-width);
+  max-width: (var(--movie-width));
+  height: 400px;
+  margin-top: -10px;
+  padding: 10px 0;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 /* BUTTONS SLIDER */
@@ -216,18 +257,20 @@ header {
   outline: none;
   border: none;
   color: white;
-  top: 156;
+  top: 116;
   z-index: 5;
   visibility: hidden;
 }
 
-#moveLeft {
+.right {
+  right:0;
+}
+
+.btn-nav .left {
   left: 0;
 }
 
-#moveRight {
-  right: 0;
-}
+
 
 .container:hover .btn-nav,
   .container:hover .container-indicators {
@@ -237,6 +280,7 @@ header {
 /* LINKS FOOTER */
 .link {
   padding: 50px;
+  text-align: center;
 }
 
 .sub-links ul {
