--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ h1 {
   padding-top: 0px;
   padding-left: 50px;
   margin-top: 20px;
+  font-size: 30px;
 }
 
 .wrapper {
@@ -69,7 +70,7 @@ header {
   align-items: center;
 }
 
-.netflixLogo {
+.containerlogo {
   grid-area: nt;
   object-fit: cover;
   width: 300px;
@@ -78,6 +79,7 @@ header {
   padding-left: 30px;
   padding-top: 0px;  
 }
+
 #juststreamit {
   font-size: xx-large;
   margin-top: 0px;
@@ -93,7 +95,10 @@ header {
 .main-nav a {
   color: var(--light);
   text-decoration: none;
-  margin: 5px;  
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .main-nav a:hover {
@@ -215,36 +220,77 @@ header {
   cursor: pointer;
 }
 
-.imdb_note {
-  padding: 10px;
-  color: green;
-}
 
 /* IMG PRINCIPAL */
+
+.maincontainer {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  line-height: 44.8px;
+}
+
 .mainmovie {
-  width: 400px;
+  width: 800px;
   height: 400px;
   position: relative;
   right: 0px;
+
+}
+
+.maindesc {
+  width: 400px;
+  text-align: center;
+  padding-top: 50px;
+}
+
+#landing {
+  display: flex;
+  margin: auto;
+  border-color: var(--light);
+  border: solid;
+  border-radius: 10px;
+}
+
+#besttitle {
+  margin-top: 45px;
+  transition: all 0.8s ease-in-out
+}
+
+#besttitle:hover {
+  transform: scale(1.3);
+
 }
 
 .mainmovie img {
   height: 100%;
-  width: 100%;
+  width: 400px;
+  object-fit: cover;
+  border-radius: 7px;
 }
 
-.main-description {
-  display: inline-block;
-  position: absolute;
-  z-index: 9999;
-  background-color: #272727;
-  width: var(--movie-width);
-  max-width: (var(--movie-width));
-  height: 400px;
-  margin-top: -10px;
-  padding: 10px 0;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+.mainmovie img:hover {
+  cursor: pointer;
+}
+
+#bestnote {
+  color:green;
+}
+
+#bestinfos {
+  margin-top: 30px;
+  width: 80px;
+  height: 35px;
+  border-radius: 10px;
+  border-color: var(--light);
+  background-color: var(--light);
+  color: var(--primary);
+  font-family: inherit;
+}
+
+#bestinfos:hover {
+  cursor: pointer;
+  background-color: var(--primary);
+  color: var(--light)
 }
 
 /* BUTTONS SLIDER */
@@ -257,9 +303,13 @@ header {
   outline: none;
   border: none;
   color: white;
-  top: 116;
+  top: 112;
   z-index: 5;
   visibility: hidden;
+}
+
+.btn-nav:hover {
+  cursor: pointer;
 }
 
 .right {
@@ -320,15 +370,17 @@ footer {
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow: hidden;
   background: rgba(0,0,0,0.8); /* Black w/ opacity */
   overflow-y: hidden;
 }
 
+
 /* Modal Content/Box */
 .modal-wrapper {
-  background-color: #fefefe;
-  color:#141414;
+  background-color: var(--primary);
+  color: var(--light);
+  border-color: var(--light);
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
@@ -336,6 +388,15 @@ footer {
   max-width: calc(100vh - 20px);
   max-height: calc(100vh - 20px);
   overflow: auto;
+}
+
+#modaltitle {
+  text-align: center;
+}
+
+#modalImage {
+  display: block;
+  margin: auto;
 }
 
 /* The Close Button */
@@ -353,3 +414,7 @@ footer {
   cursor: pointer;
 }
 
+#closeButton {
+  width: 36px;
+  height: 36px;
+}
