--- a/css/style.css
+++ b/css/style.css
@@ -388,6 +388,7 @@ footer {
   max-width: calc(100vh - 20px);
   max-height: calc(100vh - 20px);
   overflow: auto;
+  text-align: justify;
 }
 
 #modaltitle {
