--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,7 @@ header {
   color: white;
   top: 112px;  
   z-index: 5;
+  visibility: hidden
 }
 
 .btn-nav:hover {
@@ -360,15 +361,15 @@ footer {
 
  /* The Modal (background) */
  .modal {
-  display: flex; /* Hidden by default */
+  display: flex;
   align-items: center;
   justify-content: center;
-  position: fixed; /* Stay in place */
-  z-index: 3; /* Sit on top */
+  position: fixed; 
+  z-index: 3;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100%;
+  height: 100%; 
   overflow: hidden;
   background: rgba(0,0,0,0.8); /* Black w/ opacity */
   overflow-y: hidden;
@@ -380,10 +381,10 @@ footer {
   background-color: var(--primary);
   color: var(--light);
   border-color: var(--light);
-  margin: 15% auto; /* 15% from the top and centered */
+  margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 600px; /* Could be more or less, depending on screen size */
+  width: 600px; 
   max-width: calc(100vh - 20px);
   max-height: calc(100vh - 20px);
   overflow: auto;
@@ -415,6 +416,6 @@ footer {
 }
 
 #closeButton {
-  width: 36px;
-  height: 36px;
+  width: 25px;
+  height: 25px;
 }
