--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@ header {
 .maindesc {
   width: 400px;
   text-align: center;
-  padding-top: 50px;
 }
 
 #landing {
@@ -261,6 +260,11 @@ header {
 
 }
 
+#bestdescription {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
 .mainmovie img {
   height: 100%;
   width: 400px;
@@ -277,7 +281,8 @@ header {
 }
 
 #bestinfos {
-  margin-top: 30px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   width: 80px;
   height: 35px;
   border-radius: 10px;
