--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ header {
   z-index: 9999;
   background-color: #272727;
   width: var(--movie-width);
-  max-width: (var(--movie-width));
+  max-width: var(--movie-width);
   margin-top: -10px;
   padding: 10px 0;
   border-bottom-left-radius: 10px;
