--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
 
 @font-face {
   font-family: 'gothammedium';
-  src: url('../Gotham-Font/webkit/gothammedium-webfont.eot');
-  src: url('../Gotham-Font/webkit/gothammedium-webfont.eot?#iefix') format('embedded-opentype'),
-       url('../Gotham-Font/webkit/gothammedium-webfont.woff2') format('woff2'),
-       url('../Gotham-Font/webkit/gothammedium-webfont.woff') format('woff'),
-       url('../Gotham-Font/webkit/gothammedium-webfont.ttf') format('truetype'),
-       url('../Gotham-Font/webkit/gothammedium-webfont.svg') format('svg');
+  src: url('../police/gothammedium-webfont.eot');
+  src: url('../police/gothammedium-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../police/gothammedium-webfont.woff2') format('woff2'),
+       url('../police/gothammedium-webfont.woff') format('woff'),
+       url('../police/gothammedium-webfont.ttf') format('truetype'),
+       url('../police/gothammedium-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 
@@ -17,11 +17,9 @@
   --primary: #141414;
   --light: #F3F3F3;
   --dark: 	#686868;
-  
   --movie-width: 15.5vw;
   --movie-height: 200px;
   --arrow-width: 50px;
-  --slider-py: 150px;
 }
 
 html, body {
@@ -35,9 +33,6 @@ html, body {
   box-sizing: border-box;
   line-height: 1.4;
   overflow-x: hidden;
-}
-.container {
-  position: relative;
 }
 
 
@@ -70,12 +65,11 @@ header {
   align-items: center;
 }
 
-.containerlogo {
+.logo {
   grid-area: nt;
   object-fit: cover;
   width: 300px;
   max-height: 100%;
-  
   padding-left: 30px;
   padding-top: 0px;  
 }
@@ -105,23 +99,30 @@ header {
   color: var(--dark);
 }
 
-.sub-nav {
+.main-nav--account {
   grid-area: sb;
   padding: 0 40px 0 40px;
 }
 
-.sub-nav a {
+.main-nav--account a {
   color: var(--light);
   text-decoration: none;
   margin: 5px;
 }
 
-.sub-nav a:hover {
+.main-nav--account a:hover {
   color: var(--dark);
 }
 
 /* MAIN CONTAINER */
+
+
 /* SLIDER CONTAINER */
+
+.container {
+  position: relative;
+}
+
 .slider {
   width: 100%;
   overflow-x: hidden;
@@ -133,11 +134,11 @@ header {
 }
 
 /* SLIDER INDICATORS  */
-.container-indicators {
+.container__indicators {
   width: 100px;
   position: absolute; 
   right: 0;
-  top: calc(var(--slider-py) - 60px);
+  top: 50px;
   visibility: hidden;
 }
 
@@ -148,7 +149,7 @@ header {
   display: inline-block;
 }
 
-.indicator.active {
+.indicator--active {
   background-color: white;
 }
 
@@ -210,12 +211,12 @@ header {
   cursor:default;
 }
 
-.description_title {
+.description__title {
   padding-left: 10px;
   white-space: initial;
 }
 
-.description_title:hover {
+.description__title:hover {
   color:grey;
   cursor: pointer;
 }
@@ -223,26 +224,17 @@ header {
 
 /* IMG PRINCIPAL */
 
-.maincontainer {
+.container--main {
   margin-top: 100px;
   margin-bottom: 100px;
   line-height: 44.8px;
+  position: relative;
 }
 
 .mainmovie {
   width: 800px;
   height: 400px;
   position: relative;
-  right: 0px;
-
-}
-
-.maindesc {
-  width: 400px;
-  text-align: center;
-}
-
-#landing {
   display: flex;
   margin: auto;
   border-color: var(--light);
@@ -250,29 +242,33 @@ header {
   border-radius: 10px;
 }
 
-#besttitle {
+.maindesc {
+  width: 400px;
+  text-align: center;
+}
+
+.description__title--best {
   margin-top: 45px;
-  transition: all 0.8s ease-in-out
+  transition: all 0.8s ease-in-out;
 }
 
-#besttitle:hover {
+.description__title--best:hover {
   transform: scale(1.3);
-
 }
 
-#bestdescription {
+#bestsynopsis {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.mainmovie img {
+#mainMovieImg {
   height: 100%;
   width: 400px;
   object-fit: cover;
   border-radius: 7px;
 }
 
-.mainmovie img:hover {
+#mainMovieImg:hover {
   cursor: pointer;
 }
 
@@ -321,14 +317,14 @@ header {
   right:0;
 }
 
-.btn-nav .left {
+.left {
   left: 0;
 }
 
 
 
 .container:hover .btn-nav,
-  .container:hover .container-indicators {
+  .container:hover .container__indicators {
     visibility: visible;
   }
 
@@ -382,7 +378,7 @@ footer {
 
 
 /* Modal Content/Box */
-.modal-wrapper {
+.modal__wrapper {
   background-color: var(--primary);
   color: var(--light);
   border-color: var(--light);
@@ -396,31 +392,28 @@ footer {
   text-align: justify;
 }
 
-#modaltitle {
+#modal__title {
   text-align: center;
 }
 
-#modalImage {
+#modal__image {
   display: block;
   margin: auto;
 }
 
 /* The Close Button */
-.js-modal-close {
+.modal__close-button {
   color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
+  width: 25px;
+  height: 25px;
 }
 
-.js-modal-close:hover,
-.js-modal-close:focus {
+.modal__close-button:hover,
+.modal__close-button:focus {
   color: black;
   text-decoration: none;
   cursor: pointer;
-}
-
-#closeButton {
-  width: 25px;
-  height: 25px;
 }
