--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@
        url('../police/gothammedium-webfont.svg') format('svg');
   font-weight: normal;
   font-style: normal;
-
 }
 
 :root {
@@ -72,6 +71,11 @@ header {
   max-height: 100%;
   padding-left: 30px;
   padding-top: 0px;  
+}
+
+.logo img {
+  width: 250px;
+  margin-left: 25px;
 }
 
 #juststreamit {
